5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4354/executions/1649_2703.log
== TEST (2019-04-05 19:34:14) 
-- CODE:
idade = int(input("Digite a idade: "))
if(idade < 18) :
	print("eleitor")
else :	
	print(nao_eleitor)
-- OUTPUT:
eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 19:34:37) 
-- CODE:
idade = int(input("Digite a idade: "))
if(idade >= 18) :
	print("eleitor")
else :	
	print(nao_eleitor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(nao_eleitor)
NameError: name 'nao_eleitor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 19:34:52) 
-- CODE:
idade = int(input("Digite a idade: "))
if(idade >= 18) :
	print("eleitor")
else :	
	print("nao_eleitor")
-- EXECUTION TIME:
0.145784
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 00:58:28) 
-- CODE:
idade = int(input("Digite a idade: "))
if(idade >= 18) :
	print("eleitor")
else :	
	print("nao_eleitor")
-- EXECUTION TIME:
0.1915
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
